# grafica

./: CMakeLists.txt  README.md  grafica.sln
Indiv3/: CMakeLists.txt
Indiv3/src/: application.cpp  callback_manager.cpp  camera.cpp  camera.h  cub_mixed_textures.cpp  cube.h  mesh.cpp  mesh.h  resource_manager.cpp  tetra.cpp  texture.h
Laba10/: CMakeLists.txt  Laba10.cpp  Laba10.h
Laba10/src/: Laba10.cpp  application.cpp  application.h  buffer_objects.cpp  callback_manager.cpp  (+3 more)
Laba11/: CMakeLists.txt
Laba12/: CMakeLists.txt  main.cpp
Laba13/: CMakeLists.txt
Laba14/: CMakeLists.txt
Laba14/res/shaders/: f_circle.glsl  f_directional_light.glsl  f_model.glsl  v_circle.glsl
Laba14/src/: application.cpp  callback_manager.cpp  camera.cpp  camera.h  resource_manager.cpp  shader_program.cpp  shader_program.h  sub_texture.h
Laba2/: FastBitmap.cs  Form1.Designer.cs  Form1.cs  Laba2.csproj  Task1.Designer.cs  Task1.cs  Task2.Designer.cs  Task2.cs  Task3.Designer.cs  Task3.cs
Laba3/: Form1.Designer.cs  Form1.cs  Laba3.csproj  Task1.Designer.cs  Task1.cs  Task2.Designer.cs  Task2.cs  Task3.Designer.cs  Task3.cs
Laba4/: Laba4.csproj  Paint.Designer.cs  Paint.cs  Task3.Designer.cs  VecPaintD.cs  VectorPaint.Designer.cs
Laba5/: Form1.cs  Laba5.csproj  Task1.Designer.cs  Task1.cs  Task2.Designer.cs  Task2.cs  Task3.Designer.cs  Task3.cs
Laba6/: Form1.Designer.cs  Laba6.csproj  Task1.Designer.cs  Task1.cs  VecPaintD.cs  VecPaintV.cs  VectorPaint.cs
Laba7/: Laba7.csproj  Task1.Designer.cs  Task1.cs
Laba8/: Form1.cs  GraphD.Designer.cs  Laba8.csproj  Program.cs  Task1.Designer.cs  Task1.cs  VecPaintD.resx  VectorPaint.cs
Laba9/: ChartFH.cs  GraphD.cs  Laba9.csproj  Task1.Designer.cs  Task1.cs  Task3.Designer.cs
blank/: Edge.cs  Form1.cs  Laba4.csproj  Laba5.csproj  Paint.cs  Point2D.cs  PointArray.cs  Polygon.cs  Task1.Designer.cs  Task1.cs  Task2.Designer.cs  Task2.cs  Task3.Designer.cs  Task3.cs  VecPaintD.Designer.cs  VecPaintD.cs  VecPaintD.resx  VecPaintV.Designer.cs  VecPaintV.cs  VecPaintV.resx  VectorPaint.Designer.cs  VectorPaint.cs  VectorPaint.resx  VectorPaintD.Designer.cs  VectorPaintD.cs  Vertex.cs  XRayEngine.Designer.cs  XRayEngine.cs  blank.csproj
glad/: CMakeLists.txt
laba1/: Form1.Designer.cs  Form1.cs  blank.csproj  laba1.csproj
(+128 files in other folders)
